--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,46 @@
-version : "1"
+version: "1"
 services:
-  react :
+  frontend:
     build:
-      context: .
       dockerfile: Dockerfile.dev
-    ports:
-      - "53000:3000"
-    volumes:
-      - /var/www/html/node_modules
-      - ./:/var/www/html
-    environment:
-      - CHOKIDAR_USEPOLLING=true
+      context: ./frontend
+    volumes: 
+      - /var/www/frontend/node_modules
+      - ./frontend:/var/www/frontend
     stdin_open: true
-  react-tests :
+  backend:
+    container_name: app_backend
     build:
-      context: .
       dockerfile: Dockerfile.dev
-    volumes:
-      - /var/www/html/node_modules
-      - ./:/var/www/html
+      context: ./backend
+    volumes: 
+      - /var/www/backend/node_modules
+      - ./backend:/var/www/backend
     environment:
-      - CHOKIDAR_USEPOLLING=true
-    command: [
-      "npm",
-      "run",
-      "test"
-    ]
+      MYSQL_HOST: mysql
+      MYSQL_USER: jpro 
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: myapp
+      MYSQL_PORT: 3306    
+  nginx:
+    restart: always
+    build:
+      dockerfile: Dockerfile
+      context: ./nginx
+    ports:
+      - "3000:80"
+  # mysql:
+  #   restart: unless-stopped
+  #   build: 
+  #     dockerfile: Dockerfile
+  #     context: ./mysql
+  #   container_name: app_mysql
+  #   ports:
+  #     - "3306:3306"
+  #   volumes:
+  #     - ./mysql/mysql_data:/var/lib/mysql
+  #     - ./mysql/sqls/:/docker-entrypoint-initdb.d/
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: password
+  #     MYSQL_DATABASE: myapp
 
