--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.9"
 services:
   frontend:
     image: woghks778803/docker-frontend
@@ -9,7 +9,6 @@ services:
       - /var/www/frontend/node_modules
       - ./frontend:/var/www/frontend
     stdin_open: true
-    # mem_limit: 128m
 
   backend:
     container_name: app_backend
@@ -22,11 +21,10 @@ services:
       - ./backend:/var/www/backend
     environment:
       MYSQL_HOST: $MYSQL_HOST
-      MYSQL_USER: $MYSQL_USER
+      MYSQL_USER: $MYSQL_USER 
       MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
       MYSQL_DATABASE: $MYSQL_DATABASE
       MYSQL_PORT: $MYSQL_PORT
-    # mem_limit: 128m
     
   nginx:
     restart: always
@@ -36,10 +34,6 @@ services:
     #   context: ./nginx
     ports:
       - "80:80"
-    # mem_limit: 128m
-    links: 
-      - frontend
-      - backend
 
   # mysql:
   #   restart: unless-stopped
@@ -55,4 +49,12 @@ services:
   #   environment:
   #     MYSQL_ROOT_PASSWORD: password
   #     MYSQL_DATABASE: myapp
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         cpus: '0.50'
+  #         memory: 50M
+  #       reservations:
+  #         cpus: '0.25'
+  #         memory: 20M
 
