--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,11 +1,13 @@
-server{
-    listen 3000
+server {
+    listen 3000;
 
     location / {
-        root /usr/share/nginx/html
-        index index.html index.htm
+
+        root /usr/share/nginx/html;
+        index index.html index.htm;
         # 1 page 기반의 웹 페이지 개발을 지원하기 때문에 index.html을 
         # 기반으로 내부 모듈을 교체하는 방식으로 동작 (angular, react)
-        try_files $uri $uri/ /indev.html
+        try_files $uri  $uri/ /index.html;
+
     }
 }
